# backend

./: .env  Cargo.toml
.sqlx/: query-109c6445371ce0d06bf6582371daae07303a5fcfbf56a06b6f7b12686b8144d1.json  query-12b856901814cbffe3b047ce3430269204b644f6a7a9e6517801c15dc7ebdd8c.json  query-21234ff7f668725d68a59e5e666ce0baf3b0e4152cd88f88d0863af69a80368d.json  query-51d1cf554089351da379a66e8abd3c858c3d9bcf50e90a7c00b036ea7f1d1969.json  query-557f363fd2b8ead2aa02312cd54e2a0c0a5987e98f0612bd607f09911bf44bc3.json  query-6350f39d5e873f00cf81305cbd54a243468609bf0539fe615a5dda380296d202.json  query-81fcc1f56653261075a286e2f48a7fd5378ee0f85545241c0a705301919f13c6.json  query-9a7665a1526d160be8ef2644f3519c5f3929c4bc68618afbaa4cd7354166e69c.json  query-c47e5d0cf697d4d37a228b95254560cd784949346d3ae8ddb09068c29b478732.json  query-c56c327a0daae0966c63821031afe572b2369814fe58eb8774dffc0e726df87b.json  query-f5b8b655b20ae22b4b310d7a7d5c9b1ed1fe537adcab4c93c6d76a39e3a1875c.json
migrations/: 20250601000000_enable_pgcrypto.sql  20250630143100_create_vehicles.sql  20250630143200_create_auctions.sql  20250630143300_create_bids.sql  20250630143400_create_inquiries.sql  20250630154728_create_users.sql  20250630172735_add_highest_bidder_id_to_auctions.sql  20250702210840_add_highest_bidder_id_column.sql
migrations/20250710080307_init_schema/: down.sql  up.sql
src/: app.js  config.rs  db.rs  error.rs  index.js  main.rs  package-lock.json  package.json  server.js
src/auctions/: handlers.rs  mod.rs  models.rs  payloads.rs
src/auth/: handlers.rs  middleware.rs  mod.rs  models.rs  utils.rs
src/config/: index.js
src/db/: connection.rs  mod.rs
src/inquiries/: handlers.rs  models.rs
src/middleware/: auth.js  errorHandler.js
src/models/: Auction.js  Inquiry.js  User.js  Vehicle.js
src/routes/: auctions.js  auctions.rs  auth.js  auth.rs  bids.rs  health.rs  inquiries.js  inquiries.rs  mod.rs  (+4 more)
(+14 files in other folders)
