[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
bcrypt = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls","postgres","uuid","json","time"] }
uuid = { version = "1.0", features = ["serde","v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json","multipart","rustls-tls"] }
mime_guess = "2.0"
once_cell = "1.20"
validator = { version = "0.16", features = ["derive"] }
sha1 = "0.10"
hex = "0.4"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
sqlx-cli = { version = "0.7", features = ["postgres"] }
