[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
dotenvy = "0.15"
envy = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls","postgres","macros","migrate"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0"
bcrypt = "0.12"
reqwest = { version = "0.11", features = ["json","rustls-tls"] }
tower-http = { version = "0.3", features = ["cors"] }

# Pure-Rust JWT deps instead of ring-based jsonwebtoken
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"

